Fixing some responsive layout bugs in tablet mode Fixed the spacing of the social icons in the footer

--- a/web/app/themes/hpmv4/main.css
+++ b/web/app/themes/hpmv4/main.css
@@ -638,8 +638,6 @@ footer#colophon .footer-tag p {
   font-weight: normal;
 }
 .footer-last {
-  padding-left: 100px;
-  padding-right: 200px;
   position: relative;
 }
 .footer-last ul {
